<resources>
    <!-->main<-->
    <string name="app_name">Ki11QwertyApp</string>
    <!-->Layout1<-->
    <string name="image_avatar_mgsr">image_avatar_mgsr</string>
    <string name="android_developer">Junior Android Developer</string>
    <string name="First_last_name">Antonov A.A.</string>
    <string name="Experience">Опыт работы менее одного года</string>
    <string name="about_me">Закончил курсы Java разработки, есть опыт работы с Git,
    Android studio, Intellij IDEA, Php , css, html. имею базовые навыки работы с
    базами данных, владею навыками ООП, Многопоточности, Junit , TestNg и основными
    патернами проектирования! (но это не точно)</string>
    <!-->buttons<-->
    <string name="some_text">Some Text</string>
    <string name="previous_button">previous Page</string>
    <string name="next_button">next Page</string>
    <!-->MainLayout<-->
    <string name="main_lesson_4_button">урок №4</string>
    <string name="main_lesson_5_button">Урок №5</string>
    <string name="main_lesson_6_button">Урок №6</string>
    <!--> lesson4 <-->
    <string name="lesson_4_alert">Закрыть Activity  \n(Alert)</string>
    <string name="lesson_4_alert_Single">Выбрать напиток \n (SingleChoice Alert)</string>
    <string name="lesson_4_alert_Multi">Выбрать услугу \n (MultiChoice Alert)</string>
    <string name="lesson_4_alert_manual_view">ManualView Alert</string>
    <string name="lesson4_4_alert_data_picker">Выбрать дату \n (DataPickerDialog)</string>
    <string name="lesson4_4_alert_time_picker">Выбрать время \n (TimePickerDialog)</string>
    <!--> lesson5 <-->
    <string name="lesson_5_listview">список контактов \n 100шт \n(ScrollView)</string>
    <string name="lesson_5_listview_with_adapter">список контактов\n2000шт \n(ListView)</string>
    <string name="lesson_5_gridview">показать сетку \n(GridView)</string>
    <string name="lesson_5_tasks">список дел \n(ДЗ)</string>
    <!--> lesson6 <-->
    <string name="lesson_6_edittext_text">введите текст который следует
        отправить в новое Activity и нажмите кнопку</string>
    <string name="github">
        https://github.com/ki11qwerty/AndroidProjects/tree/master/MyApp3/app/src/main</string>
    <string name="text_in_email">Hello World! текст отправленный из приложения</string>
    <!--> Lesson7 - 8  <-->
    <string name="lesson8_asynctask_handler">AsyncTask\nHandler</string>
    <string name="lesson8_save_load">Запись и чтение \n из файла</string>
    <string name="lesson8_remove">remove</string>
    <string name="lesson8_swap">swap</string>
    <string name="add1">add frag1</string>
    <string name="add2">add frag2</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!-->ну короче тут все понятно и в нужно делать именно так, но для учебы это только затрата по времени,
     далее буду хардкодить строки<-->
</resources>
