<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="50dp"
    android:layout_marginStart="50dp"
    android:minHeight="250dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_lesson_4_main"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/colorLesson4"
            android:text="@string/main_lesson_4_button" />

        <Button
            android:id="@+id/button_lesson_5_main"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/colorLesson5"
            android:text="@string/main_lesson_5_button"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_weight="7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_lesson6_main"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/colorLesson6"
            android:text="@string/main_lesson_6_button" />

        <Button
            android:id="@+id/button_lesson7_main"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/colorLesson7"
            android:text="Урок №7,8"
            android:visibility="visible" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7">

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="100px"
            android:layout_height="150px"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_forward_main"
            android:layout_width="150px"
            android:layout_height="90px"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>