<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lesson8_relative_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/l8l1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/l8l2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lesson8_1fragment_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/add1" />

            <Button
                android:id="@+id/lesson8_1fragment_remove"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/lesson8_remove" />

            <Button
                android:id="@+id/lesson8_1fragment_swap"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/lesson8_swap" />

            <Button
                android:id="@+id/lesson8_2fragment_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/add2" />

            <Button
                android:id="@+id/lesson8_2fragment_remove"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/lesson8_remove" />

            <Button
                android:id="@+id/lesson8_2fragment_swap"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/lesson8_swap" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lesson8_linear_layout_for_fragments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <FrameLayout
                android:id="@+id/lesson8_frame1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/lesson8_frame2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1">

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>